--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
 	"files": [
 		"lib/",
 		"src/",
-		"authProviders/"
+		"authProviders/",
+		"shims.d.ts"
 	],
 	"scripts": {
 		"build": "npm run pre-build && npm run build:sub_cjs && npm run build:sub_es && rollup -c",
